refactor: Enhance configuration, security headers, and API handling
- Added `cors` support in `vite.config.js` for development and preview servers.
- Configured proxy headers to include `Access-Control-Allow-Origin`.
- Introduced rollup manual chunking for optimized vendor bundling.
- Enhanced `docker-compose.prod.yml` with security settings, environment variables, and tmpfs adjustments.
- Improved CORS and security headers in `nginx/default.conf`.
- Updated `api.js` to include `cors` mode, omitted credentials, and removed unused methods.
- Cleaned up unused keys and values in localization files.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,8 +15,17 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    security_opt:
+      - no-new-privileges:true
+    read_only: true
+    tmpfs:
+      - /var/cache/nginx:noexec,nosuid,size=100m
+      - /var/run:noexec,nosuid,size=100m
+      - /tmp:noexec,nosuid,size=100m
     environment:
       - NODE_ENV=production
+      - NGINX_WORKER_PROCESSES=auto
+      - NGINX_WORKER_CONNECTIONS=1024
     deploy:
       resources:
         limits:
