--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "mock-api": "node mock-server.js",
+    "dev:full": "concurrently \"npm run mock-api\" \"npm run dev\""
   },
   "dependencies": {
     "@fullcalendar/daygrid": "^6.1.0",
@@ -38,6 +40,9 @@
     "zustand": "^4.5.7"
   },
   "devDependencies": {
+    "concurrently": "^8.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.1.0",
