--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "recharts": "^2.8.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^4.5.7"
-  },
-  "devDependencies": {
+    "zustand": "^4.5.7",
     "concurrently": "^8.2.0",
     "cors": "^2.8.5",
-    "express": "^4.18.0",
+    "express": "^4.18.0"
+  },
+  "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.1.0",
