--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,4 @@ dist-ssr
 .env.local
 .env.development.local
 .env.test.local
-.env.production.local
+.env.production.localpublic/config/app-config.json
