feat: Mobile optimization and responsive components for Agent Platform
- Added `MOBILE_OPTIMIZATION.md` outlining RWD design principles, improvements, and effects.
- Introduced responsive layout and styles across AgentDashboard, AgentPage, and AgentLoginPage.
- Enhanced modal components (`RequestLeaveModal`, etc.) with sticky headers and mobile-friendly adjustments.
- Developed `MobileScheduleView` and `ResponsiveTable` components tailored for mobile and desktop views.
- Improved calendar and table design with dynamic layouts for enhanced usability.
- Refined recent assignments display with filtering for past events and added `showPastAssignments` state.
- General enhancements for consistency, accessibility, and loading feedback.

--- a/public/config/app-config.json
+++ b/public/config/app-config.json
@@ -3,7 +3,9 @@
   "api": {
     "baseUrl": "https://hrmapi.prteam3.com",
     "authPath": "/api/v1/auth/sign-in",
-    "workspacesPath": "/api/v1/users/workspaces",
+    "agentAuthPath": "/api/v1/agent-auth/sign-in",
+    "brandsPath": "/api/v1/brands",
+    "workspacesPath": "/api/v1/workspaces-by-brand",
     "botsPath": "/api/v1/bots/all-bots",
     "membersPath": "/api/v1/workspaces/:id/members"
   },
