--- a/ops/config/app-config.prod.json
+++ b/ops/config/app-config.prod.json
@@ -1,7 +1,7 @@
 {
   "initialized": false,
   "api": {
-    "baseUrl": "https://hrmapi.prteam3.com",
+    "baseUrl": "https://api.prteam3.com",
     "authPath": "/api/v1/auth/sign-in",
     "workspacesPath": "/api/v1/users/workspaces",
     "botsPath": "/api/v1/bots/all-bots",
