🗂️ Reorganize project structure and enhance calendar views
✨ Features:
- Add multiple calendar view modes (Calendar, Resource, List, Summary)
- Implement handover list functionality for leave requests
- Add agent leave allowance configuration
- Create ScheduleSummaryView component for 30+ employees

📁 Project Structure:
- Reorganize docs/ into categorized subdirectories (api/, backend/, database/, deployment/, frontend/, guides/)
- Move Docker configs to docker/ directory
- Create comprehensive PROJECT_STRUCTURE.md
- Add README files for each documentation category

🔧 Technical Improvements:
- Install @fullcalendar/resource-daygrid and @fullcalendar/resource-timegrid
- Enhance FullCalendarComponent with multiple view modes
- Update SchedulePage with view mode selector
- Fix .gitignore to include docs and docker directories

📚 Documentation:
- Reorganize all documentation for better navigation
- Create structured documentation hierarchy
- Update main README.md to reference new structure

# Conflicts:
#	index.html
#	src/components/agent/RequestLeaveModal.jsx
#	src/features/hrm/schedule/SchedulePage.jsx
#	src/services/api.js

--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,7 @@ dist-ssr
 .env.local
 .env.development.local
 .env.test.local
-.env.production.localpublic/config/app-config.json
+.env.production.local
+
+# Runtime config (keep template, ignore actual config)
+public/config/app-config.json
