--- a/public/config/app-config.json
+++ b/public/config/app-config.json
@@ -1,7 +1,7 @@
 {
   "initialized": true,
   "api": {
-    "baseUrl": "https://hrmapi.prteam3.com",
+    "baseUrl": "http://127.0.0.1:8000",
     "authPath": "/api/v1/auth/sign-in",
     "agentAuthPath": "/api/v1/agent-auth/sign-in",
     "brandsPath": "/api/v1/brands",
